# agent-memory

./: .gitignore  CONTRIBUTING.md  PRIVACY.md  README.md  SECURITY.md  package.json  pyproject.toml
.dev/architecture/: architecture-v0.md  graph-vs-hybrid-retrieval.md  hermes-adapter-contract-v0.md
.dev/kb/: curation-and-promotion-v0.md  harness-boundary-v0.md  kb-architecture-v0.md  kb-m1-current-audit.md  kb-m1-implementation-plan.md  kb-m1-plus-implementation-plan.md  kb-m1-scope-freeze.md  retrieval-evaluation-v0.md  source-ingestion-v0.md
.dev/product/: thesis-and-scope.md
.dev/release/: release-checklist-v0.md
.dev/research/: brain-and-llm-memory-notes.md
.dev/roadmap/: roadmap-v0.md  (+1 more)
.github/: pull_request_template.md
docs/: first-run-memory-layer.md  hermes-dogfood.md  install-smoke.md
scripts/: bump_release_version.py  check_release_metadata.py  run_claude_with_memory.py  run_codex_with_memory.py  smoke_published_install.py  smoke_release_readiness.py
tests/: test_bump_release_version.py  test_cli.py  test_cli_review_and_scope.py  test_episode_review_and_provenance.py  test_experience_traces.py  test_hermes_adapter.py  test_kb_export.py  test_memory_activations.py  test_memory_flow.py  test_npm_launcher.py  test_procedure_and_relation_flow.py  test_prompt_wrapper_scripts.py  test_published_install_smoke.py  test_release_metadata.py  test_release_smoke.py  test_release_workflows.py  test_repository_trust_docs.py  test_retrieval_evaluation.py  test_retrieval_trace.py  test_review_and_scope_ranking.py  test_scope_hierarchy_and_relation_expansion.py
(+43 files in other folders)
