[project]
name = "cafitac-agent-memory"
version = "0.1.47"
description = "Reusable memory runtime for AI agents"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Agent Memory Contributors" }]
keywords = ["agent", "memory", "rag", "knowledge-base", "sqlite"]
urls = { Homepage = "https://github.com/cafitac/agent-memory#readme", Repository = "https://github.com/cafitac/agent-memory", Issues = "https://github.com/cafitac/agent-memory/issues" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "pydantic>=2.8",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
agent-memory = "agent_memory.api.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"agent_memory.storage" = ["schema.sql"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true

default-groups = ["dev"]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
